Updated resume and portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-4">
                         <div class="card p-2 shadow border-0 ">
-                            <a href="#"><img src="assets/images/soon.jpg" alt="Coming Soon" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <a href="https://collin-hodgson.github.io/passwordgenerator/"><img src="assets/images/password.PNG" alt="Password Generator" class="card-img-top img-fluid mx-auto d-block"></a>
                             <h4 class="overlay-text text-center m-1">Password Generator</h4>
                         </div>
                     </div>
@@ -86,8 +86,8 @@
 
                     <div class="col-md-6 mb-4">
                         <div class="card p-2 shadow border-0 ">
-                            <a href="#"><img src="assets/images/soon.jpg" alt="Coming Soon" class="card-img-top img-fluid mx-auto d-block"></a>
-                            <h4 class="overlay-text text-center m-1">Code Quiz</h4>
+                            <a href="https://collin-hodgson.github.io/dayplanner/"><img src="assets/images/planner.png" alt="Day Planner" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <h4 class="overlay-text text-center m-1">Day Planner</h4>
                         </div>
                     </div>
                 </div>
@@ -96,8 +96,15 @@
                 <div class="row">
                     <div class="col-md-6 mb-4">
                         <div class="card p-2 shadow border-0 ">
-                            <a href="#"><img src="assets/images/soon.jpg" alt="Coming Soon" class="card-img-top img-fluid mx-auto d-block"></a>
-                            <h4 class="overlay-text text-center m-1">Day Planner</h4>
+                            <a href="https://collin-hodgson.github.io/weatherdashboard/"><img src="assets/images/dashboard.png" alt="Weather Dashboard" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <h4 class="overlay-text text-center m-1">Weather Dashboard</h4>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 mb-4">
+                        <div class="card p-2 shadow border-0 ">
+                            <a href="https://drive.google.com/file/d/1V6Eo94SWk8Ox7SalijZLZNSvAAsgQWqR/view?usp=sharing"><img src="assets/images/resume.jpg" alt="Coming Soon" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <h4 class="overlay-text text-center m-1">Resume</h4>
                         </div>
                     </div>
 
