Added project 1 on portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,12 +103,29 @@
 
                     <div class="col-md-6 mb-4">
                         <div class="card p-2 shadow border-0 ">
-                            <a href="https://drive.google.com/file/d/1V6Eo94SWk8Ox7SalijZLZNSvAAsgQWqR/view?usp=sharing"><img src="assets/images/resume.jpg" alt="Coming Soon" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <a href="https://drive.google.com/file/d/1V6Eo94SWk8Ox7SalijZLZNSvAAsgQWqR/view?usp=sharing"><img src="assets/images/resume.jpg" alt="Resume" class="card-img-top img-fluid mx-auto d-block"></a>
                             <h4 class="overlay-text text-center m-1">Resume</h4>
                         </div>
                     </div>
-
                 </div>
+
+                <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <div class="card p-2 shadow border-0 ">
+                            <a href="https://github.com/Eelektrick/8-bit-bartender"><img src="assets/images/bartender.png" alt="8-Bit Bartender" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <h4 class="overlay-text text-center m-1">8-Bit Bartender</h4>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 mb-4">
+                        <div class="card p-2 shadow border-0 ">
+                            <a href="#"><img src="assets/images/soon.jpg" alt="Coming Soon" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <h4 class="overlay-text text-center m-1">Coming Soon</h4>
+                        </div>
+                    </div>
+                </div>
+
+
             </section>
         </div>
     </div>
