Changed image for 8-bit bartender

--- a/portfolio.html
+++ b/portfolio.html
@@ -112,7 +112,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-4">
                         <div class="card p-2 shadow border-0 ">
-                            <a href="https://github.com/Eelektrick/8-bit-bartender"><img src="assets/images/bartender.png" alt="8-Bit Bartender" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <a href="https://github.com/Eelektrick/8-bit-bartender"><img src="assets/images/cropped-logo.png" alt="8-Bit Bartender" class="card-img-top img-fluid mx-auto d-block"></a>
                             <h4 class="overlay-text text-center m-1">8-Bit Bartender</h4>
                         </div>
                     </div>
