Updating my portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -119,11 +119,38 @@
 
                     <div class="col-md-6 mb-4">
                         <div class="card p-2 shadow border-0 ">
+                            <a href="https://github.com/Collin-Hodgson/readmegenerator"><img src="assets/images/readme.PNG" alt="README.md Generator" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <h4 class="overlay-text text-center m-1">README.md Generator</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <div class="card p-2 shadow border-0 ">
+                            <a href="https://github.com/Collin-Hodgson/teamgenerator"><img src="assets/images/teamgenerator.PNG" alt="Team Generator" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <h4 class="overlay-text text-center m-1">Team Generator</h4>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 mb-4">
+                        <div class="card p-2 shadow border-0 ">
+                            <a href="https://github.com/AtimaB/The-Fight-Club"><img src="assets/images/fightclub.PNG" alt="The-Fight-Club" class="card-img-top img-fluid mx-auto d-block"></a>
+                            <h4 class="overlay-text text-center m-1">The Fight Club</h4>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row">
+
+                    <div class="col-md-6 mb-4">
+                        <div class="card p-2 shadow border-0 ">
                             <a href="#"><img src="assets/images/soon.jpg" alt="Coming Soon" class="card-img-top img-fluid mx-auto d-block"></a>
                             <h4 class="overlay-text text-center m-1">Coming Soon</h4>
                         </div>
                     </div>
                 </div>
+
 
 
             </section>
